--- a/index.html
+++ b/index.html
@@ -26,3 +26,133 @@
 
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Driver Buddy</title>
+</head>
+
+<body>
+
+    <header>
+        <h1>🚗 Driver Buddy</h1>
+        <p>Safe & affordable student carpooling</p>
+    </header>
+
+    <section class="features">
+        <h2>Features</h2>
+
+        <div class="feature-card">
+            <h3>Student Carpool Matching</h3>
+            <p>Connects riders and drivers going the same direction.</p>
+        </div>
+
+        <div class="feature-card">
+            <h3>Verified Profiles</h3>
+            <p>Only real students with verified emails can join.</p>
+        </div>
+
+        <div class="feature-card">
+            <h3>Smart Scheduling</h3>
+            <p>Suggests optimal ride times and notifications.</p>
+        </div>
+
+        <div class="feature-card">
+            <h3>In-App Chat & Ratings</h3>
+            <p>Communicate with drivers & riders safely and rate your ride.</p>
+        </div>
+
+        <div class="feature-card">
+            <h3>Eco-Friendly Incentives</h3>
+            <p>Earn points and track your CO₂ savings.</p>
+        </div>
+    </section>
+
+    <section class="user-story">
+        <h2>User Story</h2>
+        <p>
+            As a student living in Denton without a car, I often rely on public transport.
+            Sometimes classes are at other campuses, making rides expensive and unreliable.
+            Driver Buddy helps me find verified student drivers, save money, and arrive on time.
+        </p>
+    </section>
+
+    <section class="call-to-action">
+        <h2>Get Started</h2>
+        <p>Sign up with your university email and start sharing rides today!</p>
+        <button>Sign Up</button>
+    </section>
+
+    <footer>
+        <p>Driver Buddy © 2025 – Connecting students safely & affordably</p>
+    </footer>
+
+
+    <!-- =======================
+         CSS BELOW
+    ======================== -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+            padding: 2rem;
+        }
+
+        .feature-card {
+            background-color: white;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .user-story,
+        .call-to-action {
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .call-to-action button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .call-to-action button:hover {
+            background-color: #45a049;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
+    </style>
+
+</body>
+</html>
