Revise user story and link external CSS
Updated user story to reflect a new location and improved clarity. Removed inline CSS and linked to external stylesheet.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Driver Buddy</title>
+
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -42,28 +45,27 @@
 
         <div class="feature-card">
             <h3>In-App Chat & Ratings</h3>
-            <p>Communicate with drivers & riders safely and rate your ride.</p>
+            <p>Communicate safely and rate your ride.</p>
         </div>
 
         <div class="feature-card">
             <h3>Eco-Friendly Incentives</h3>
-            <p>Earn points and track your CO₂ savings.</p>
+            <p>Earn points & track your CO₂ savings.</p>
         </div>
     </section>
 
     <section class="user-story">
         <h2>User Story</h2>
         <p>
-            As a student living in Denton without a car, I often rely on public transport.
-            Sometimes classes are at other campuses, making rides expensive and unreliable.
-            Driver Buddy helps me find verified student drivers, save money, and arrive on time.
+            As a student living in Dallas, transportation to campus can be inconsistent and costly. Driver Buddy provides an affordable and reliable way to connect with verified student drivers, helping students reduce expenses and improve daily commute efficiency.
+
         </p>
     </section>
 
     <section class="hero">
-    <h2>Connecting Students Through Smart Carpooling</h2>
-    <p>Safe. Affordable. Sustainable.</p>
-</section>
+        <h2>Connecting Students Through Smart Carpooling</h2>
+        <p>Safe. Affordable. Sustainable.</p>
+    </section>
 
     <section class="call-to-action">
         <h2>Get Started</h2>
@@ -74,68 +76,6 @@
     <footer>
         <p>Driver Buddy © 2025 – Connecting students safely & affordably</p>
     </footer>
-
-
-    <!-- =======================
-         CSS BELOW
-    ======================== -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-            color: #333;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 2rem;
-            text-align: center;
-        }
-
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-            padding: 2rem;
-        }
-
-        .feature-card {
-            background-color: white;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .user-story,
-        .call-to-action {
-            padding: 2rem;
-            text-align: center;
-        }
-
-        .call-to-action button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 1rem 2rem;
-            font-size: 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .call-to-action button:hover {
-            background-color: #45a049;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-    </style>
 
 </body>
 </html>
