--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Driver Buddy</title>
 
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
