--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <section class="user-story">
         <h2>User Story</h2>
         <p>
-            As a student living in Dallas, transportation to campus can be inconsistent and costly. Driver Buddy provides an affordable and reliable way to connect with verified student drivers, helping students reduce expenses and improve daily commute efficiency.
+            As a student living in Dallas, transportation to campus can be inconsistent and costly. 
+            Driver Buddy provides an affordable and reliable way to connect with verified student drivers, 
+            helping students reduce expenses and improve daily commute efficiency.
 
         </p>
     </section>
