Enhance features.html with detailed description
Added description for verified student profiles feature.

--- a/html/features.html
+++ b/html/features.html
@@ -14,6 +14,11 @@
 <section>
     <ul class="list">
         <li>Verified Student Profiles</li>
+        <p>
+        DriveBuddy verifies every user using their official university email. 
+        Drivers may optionally submit safety documents (insurance, license, etc.) 
+        to ensure a secure and trusted carpooling environment.
+    </p>
         <li>Recurring or One-Time Carpools</li>
         <li>Route Optimization</li>
         <li>Rating & Review System</li>
@@ -22,4 +27,5 @@
 </section>
 
 </body>
+
 </html>
