Enhance features.html with detailed feature descriptions
Added detailed descriptions of app features including Smart Scheduling, In-App Chat, Eco-Friendly Incentives, and Route Optimization.

--- a/html/features.html
+++ b/html/features.html
@@ -14,12 +14,71 @@
 <section>
     <ul class="list">
         <li>Verified Student Profiles</li>
-        <li>Recurring or One-Time Carpools</li>
-        <li>Route Optimization</li>
-        <li>Rating & Review System</li>
-        <li>Eco badges and carbon savings</li>
+        <p>
+        DriveBuddy verifies every user using their official university email. 
+        Drivers may optionally submit safety documents (insurance, license, etc.) 
+        to ensure a secure and trusted carpooling environment.
+    </p>
+        <h2>Smart Scheduling</h2>
+    <p>
+        Smart Scheduling automatically analyzes class schedules, preferred travel times,
+        and route patterns to suggest the most optimal ride times. It detects schedule conflicts,
+        sends ride reminders, and adapts to changes in real-time.
+    </p>
+    <ul class="list">
+        <li>Detects schedule conflicts instantly</li>
+        <li>Suggests ideal pickup times based on class locations</li>
+        <li>Sends notifications for upcoming rides</li>
+        <li>Automatically syncs with student’s weekly timetable</li>
     </ul>
 </section>
 
+<section>
+    <h2>In-App Chat & Rating System</h2>
+    <p>
+        Riders and drivers can communicate instantly inside the app to coordinate pickups,
+        share status updates, and resolve questions. After each ride, both users can leave 
+        ratings and safety feedback to maintain accountability and trust.
+    </p>
+    <ul class="list">
+        <li>Real-time messaging for quick coordination</li>
+        <li>Rating system for both drivers and riders</li>
+        <li>Built-in safety issue reporting</li>
+        <li>Chat history stored securely</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Eco-Friendly Incentives</h2>
+    <p>
+        DriveBuddy rewards sustainable commuting. Every shared ride earns 
+        “Green Points,” which track carbon savings and fuel efficiency. 
+        These points may be redeemed for campus discounts or rewards.
+    </p>
+    <ul class="list">
+        <li>Earn points for every eco-friendly shared ride</li>
+        <li>Tracks carbon reduction and fuel saved</li>
+        <li>Unlock eco badges as you progress</li>
+        <li>Potential rewards through university partnerships</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Route Optimization</h2>
+    <p>
+        Dynamic route suggestions ensure that drivers take the most efficient path.
+        If a nearby rider needs pickup, drivers receive an optional match request.
+    </p>
+</section>
+
+<section>
+    <h2>Recurring or One-Time Carpools</h2>
+    <p>
+        Users can schedule repeating daily or weekly carpools, or request a 
+        single ride when needed. Smart Scheduling helps automate both options.
+    </p>
+</section>
+
 </body>
+
 </html>
